--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100&family=Rock+3D&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
-  <title>bootstrap</title>
+  <title>Animation website </title>
 </head>
 <body><div class="bg">
   <nav>
@@ -31,6 +31,18 @@
   <h3> Cooker</h3>
   <h4>28/12/2021</h4>
 </div>
+<div class="side-bar">
+  <div class="social-links">
+    <img src="./images/fb.png" alt="">
+    <img src="./images/tw.png" alt="">
+    <img src="./images/ig.png" alt="">
+    <img src="./images/tw.png" alt="">
+  </div>
+  <div class="info-links">
+    <img src="./images/info.png" alt="">
+    <img src="./images/share.png" alt="">
+  </div>
+
 </div>
 <div class="parent">
   <img class="bol1" src="./images/bubble.png" alt="">
@@ -42,8 +54,9 @@
   <img class="bol7" src="./images/bubble.png" alt="">
   <img  class="bol8" src="./images/bubble.png" alt="">
   <img class="bol9" src="./images/bubble.png" alt="">
-
 </div>
+</div>
+
 
 
 
